tests/ui/opts/params_arg_without_params.stderr
error: unexpected end of input, expected name of generic parameter
 --> tests/ui/opts/params_arg_without_params.rs:4:10
  |
4 | #[funcmap(params())]
  |          ^^^^^^^^^^
